@@ -31,6 +31,7 @@ Fixes:
      - Correctly shutdown Ecore_Thread.
      - Fix usage of FD_SET and al. when fd_set pointers are NULL (Windows)
      - Fix ecore_thread seg fault on Windows where PHS() was returning a wrong value
+     - Always call evas_render_update_free to prevent leak in Ecore_Evas X bakcend.
 
     * ecore_x
      - Fix unitialized Ecore_X_Atom use.
